0.0.0.17
============
* Redesign option page to have only one entry in plugins options

0.0.0.16
============
* Right click on error popup close the popup.
! Missing break; in nonewmail popup in switch.
+ Add option to rename contact according to new mail.
! Patch by pescuma on delete accounts 

0.0.0.15
============
! Fixed dismiss event by right click on new mail popup crash
* Change string for the status choose button
! use CallServiceSync() instead of CallService() for adding clistevent (now icon blinks)

0.0.0.14
============
! Tooltip on the clist event will now show correct text
! Remove the messagebox on double clik on mail
* Change options dialog add dialog for status choose.

0.0.0.13
============
+ Use of event count for the keyboard flashing

0.0.0.12
============
- Remove message body retrieving due to bug.

0.0.0.11
============
+ Add a function to retrieve the whole mail source.
+ Show the mail source when double clicking on it in mail browser.
+ Add a version resource.

0.0.0.10
============
+ Now able to pass hContact handle to popup so can show avatar if set.
* Change folder structure in svn SDK\import replace by include

0.0.0.9
============
+ Sorting asc and desc of the mail browser listview
+ Use the format yyyy-mm-dd hh:mm:ss for date comparaison in sorting
+ Doubleclick on list view to show the mail body but it seems to be empty :(

0.0.0.8
============
+ Add date field in mail browser
* Modify the tooltip text for the clist event (add account name)
* Rename Contact member of CAccount by hContact since it is an HANDLE
+ Updater support for BETA
* Using the right headers (no more the one in SDK)

0.0.0.7
============
+ Added changelog txt file.
+ Check presence of icolib to choose the right icon to show in clist
+ Status message will show all message pending in mail box (until they get retrieve by your email client)

0.0.0.6
============
* Options page redesign.
+ Right click on popup close the clist event too.