@@ -15,10 +15,13 @@ void main()
 {
 	char Buffer[8192];			//we do not suppose longer header
 	FILE *fp;
-	YAMNMAIL Mail;
+	YAMNMAIL *Mail;
+	PMAILDATA *MailData;
+	CMimeItem *head;
+
 	struct CHeader ExtractedHeader;
 
-	if(NULL==(fp=fopen("header.txt","r")))
+	if(NULL==(fp=fopen("header2.txt","r")))
 		return;
 	fread(Buffer,sizeof(Buffer),1,fp);
 	if(ferror(fp))
@@ -27,7 +30,13 @@ void main()
 		return;
 	}
 	fclose(fp);
-	TranslateHeaderFcn(Buffer,strlen(Buffer),&Mail.TranslatedHeader);
-	ExtractHeader(Mail.TranslatedHeader,CP_ACP,&ExtractedHeader);
+	Mail = new YAMNMAIL;
+	MailData = new PMAILDATA;
+	head = new CMimeItem;
+	Mail->MailData = *MailData;
+	Mail->MailData->TranslatedHeader = head;
+
+	TranslateHeaderFcn(Buffer,strlen(Buffer), &Mail->MailData->TranslatedHeader);
+	ExtractHeader(Mail->MailData->TranslatedHeader,CP_ACP,&ExtractedHeader);
 	return;
 }
